# sds_digest

./: .gitignore  Makefile  README.md  benchmarking.md  pyproject.toml
sds_digest/: run_api.py  run_frontend.py
sds_digest/api/: main.py  models.py  persistence.py
sds_digest/frontend/: app.py
sds_digest/llms/: judge_llm.py  qa_llm.py  structure_llm.py  summary_llm.py  utils.py
sds_digest/llms/prompts/: __init__.py  loading.py
sds_digest/llms/prompts/templates/: FULL_SDS_SYSTEM_PROMPT.md  JUDGE_PROMPT.md  STRUCTURED_SDS_SYSTEM_PROMPT.md  STRUCTURE_SECTION_PROMPT.md
sds_digest/src/: __init__.py  benchmark_models.py  benchmark_questions.json  secrets.py
sds_digest/src/extraction/: extractor.py  marker_extractor.py
sds_digest/src/processing/: llm_processor.py  processor.py
tests/: conftest.py  test_api.py  test_models.py
